﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-05-04
	Fixed: Validation does not find executables correctly.
	Changed: Some behind the scenes things to help catch an elusive problem with per-app power management.
### 2018-04-30
	Changed: Code cleanup.
### 2018-04-29
	Fixed: Clear UI log caused the log to not have anything after.
	Changed: Added a bit more logic to ensure tray becomes visible. May not actually help.
	Added: Option to ignore apps in %SYSTEMROOT%/System32. Enabled by default. Partial implementation.
	Removed: Support for case sensitive matching. Case will now always be ignored.
### 2018-04-28
	Added: Power down monitors when session is locked. Core.ini has two settings for this, one to control user idle timer and second for instant power down.
	Changed: Process adjusts are logged by default again.
	Added: Session lock actions are logged by default.
	Added: Configuration for the above added to Configuration>Logging and added two more debug options.
### 2018-04-25
	Added: [Debug] section in Core.ini with secret options to enable various debug functions at launch.
### 2018-04-24
	Fixed: Default power mode is not applied on start-up if auto-adjust is disabled.
	Removed: Experimental path location feature. Limited usability, documentation, and lack of desire to maintain it made it unwanted.
	Changed: You can now copy multiple lines from the log at the same time to clipboard.
### 2018-04-23
	Fixed: Error at HealthMonitor.cs:380 when foreground monitor was disabled.
	Changed: How empty watchlist is detected.
### 2018-04-22
	Fixed: Retarded WinForms bug.
### 2018-04-18
	Added: Health monitor now warns of low diskspace. Defaults to 150 MB.
	Added: Experimental feature to resize detected apps. Usable as `Resize={Top,Left,Width,Height}` in Watchlist.ini.
	Added: `Remember size=true/false` and `Remember position=true/false` in Watchlist.ini to control the `Resize` option.